# ELFC

./: .gitignore  ELFC.md  INSIDE.md  README.md
src/clib/: Makefile  rebuild.bat
src/clib/assert/: Makefile  build.bat  clean.bat
src/clib/crt0/: Makefile  build.bat  clean.bat  crt0.asm  elfrt0.asm
src/clib/ctype/: Makefile  build.bat  ctype.c  isalnum.c  isalpha.c  isascii.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
src/clib/elfc/: Makefile  and16.asm  atoi16.asm  build.bat  deref8.asm  derefm.asm  dpop32.asm  epush16.asm  epush8.asm  eq16.asm  esmove.asm  fp1arg.asm  fp2args.asm  inv16.asm  (+42 more)
src/elfc/: CMakeLists.txt  MakeElfC  Makefile  cg.h  cg386.c  cgelf.c  cgen.h  data.h  decl.c  decl.h  defs.h  elfc  error.c  expr.c  gen.c  main.c  misc.c  modpath.c  modpath.h  opt.c  prep.c  scan.c  stmt.c  sym.c  sys.h  tree.c
src/examples/: Makefile  calc.c  casting.c  datetime.c  export.c  fib.c  figlet.c  hello.c  macros.c  mandel.c  moonphase.c  pi.c  printenv.c  printfmt.c  promote.c  rename.c  scanfmt.c  stackframe.c  tqdemo.c  trigdemo.c  ucalc.c  unset.c  vargs.c
src/include/: elfc.inc  ops_c.inc
src/lib/: elfc.inc  macros.inc
src/tests/: Makefile  arrtest.c  clean.bat  filetest1.c  filetest2.c  filetest4.c  filetest5.c  fptest1.c  fptest2.c  fptest3.c  fptest4.c  fptest5.c  libtest2.c  libtest3.c  libtest4.c  libtest5.c  math32test.c  ptest1.c  ptest1.elfos  ptest2.c  ptest2.elfos  ptest3.c  ptest4.c  ptest4.elfos  ptest5.c  regress.bat  stctest.c  timetest.c
(+581 files in other folders)
